--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Build
       run: dotnet build ./src/ExtraLife.sln --configuration Release --no-restore 
     - name: Test
-      run: dotnet test ./src/ExtraLife.sln --no-build --verbosity normal
+      run: dotnet test ./src/ExtraLife.sln --verbosity normal
