--- a/src/ExtraLife.csproj
+++ b/src/ExtraLife.csproj
@@ -6,7 +6,7 @@
     <Authors>Evan Frisch</Authors>
     <Company />
     <Description>Library to access the DonorDrive API for ExtraLife. Provides access to commonly used functions.</Description>
-    <Copyright>Copyright © 2021</Copyright>
+    <Copyright>Copyright © 2023</Copyright>
     <PackageProjectUrl>https://github.com/walkerboh/ExtraLife</PackageProjectUrl>
     <RepositoryUrl>https://github.com/walkerboh/ExtraLife</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -15,7 +15,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="System.Text.Json" Version="7.0.3" />
   </ItemGroup>
+
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>ExtraLifeTests</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
 
 </Project>
